update test path, increase data points for bench

--- a/app/Testing.ipynb
+++ b/app/Testing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,27 +96,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C++ program failed executing with 176 strings and exit code 0\n"
+      "C++ program successfully executed with 189 strings\n"
      ]
     }
    ],
    "source": [
     "import subprocess\n",
+    "\n",
+    "command = \"cd cpp && make build && cd ..\"\n",
+    "result = subprocess.run(command, shell=True, capture_output=True)\n",
+    "command = \"stack install\"\n",
+    "result = subprocess.run(command, shell=True, capture_output=True)\n",
+    "\n",
     "t, strings = generate_test_case()\n",
     "generated_input = f\"{t}\\n\" + \"\\n\".join(strings)\n",
     "expected_output = \"\\n\".join(map(lambda string: calculate_sub_palindrome_length(string), strings))\n",
     "\n",
-    "command = \"./cpp/MSUBSTR\"\n",
+    "command = \"./cpp/build/msubstr\"\n",
     "result = subprocess.run(command, input=generated_input, text=True, capture_output=True)\n",
     "\n",
-    "if result.returncode == 0 and result.stdout == expected_output:\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
     "    print(f\"C++ program successfully executed with {t} strings\")\n",
     "else:\n",
     "    print(f\"C++ program failed executing with {t} strings and exit code {result.returncode}\")"
@@ -139,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Haskell program successfully executed with 176 strings\n"
+      "Haskell program successfully executed with 189 strings\n"
      ]
     }
    ],
