Add structured testing

--- a/app/Testing.ipynb
+++ b/app/Testing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,26 +87,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run C++ code on test cases"
+    "### Build apps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C++ program successfully executed with 150 strings\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -117,15 +108,60 @@
     "\n",
     "t, strings = generate_test_case()\n",
     "generated_input = f\"{t}\\n\" + \"\\n\".join(strings)\n",
-    "expected_output = \"\\n\".join(map(lambda string: calculate_sub_palindrome_length(string), strings))\n",
+    "expected_output = \"\\n\".join(map(lambda string: calculate_sub_palindrome_length(string), strings))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "command = \"./cpp/build/msubstr\"\n",
+    "### Run C++ code on test cases\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C++ Classic program successfully executed with 181 strings\n",
+      "C++ Direct links program successfully executed with 181 strings\n",
+      "C++ Semi persistent program successfully executed with 181 strings\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "command = \"./cpp/build/msubstr-classic\"\n",
     "result = subprocess.run(command, input=generated_input, text=True, capture_output=True)\n",
     "\n",
     "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
-    "    print(f\"C++ program successfully executed with {t} strings\")\n",
+    "    print(f\"C++ Classic program successfully executed with {t} strings\")\n",
     "else:\n",
-    "    print(f\"C++ program failed executing with {t} strings and exit code {result.returncode}\")"
+    "    print(f\"C++ Classic program failed executing with {t} strings and exit code {result.returncode}\")\n",
+    "\n",
+    "\n",
+    "command = \"./cpp/build/msubstr-direct\"\n",
+    "result = subprocess.run(command, input=generated_input, text=True, capture_output=True)\n",
+    "\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
+    "    print(f\"C++ Direct links program successfully executed with {t} strings\")\n",
+    "else:\n",
+    "    print(f\"C++ Direct links program failed executing with {t} strings and exit code {result.returncode}\")\n",
+    "\n",
+    "\n",
+    "command = \"./cpp/build/msubstr-semi-pers\"\n",
+    "result = subprocess.run(command, input=generated_input, text=True, capture_output=True)\n",
+    "\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
+    "    print(f\"C++ Semi persistent program successfully executed with {t} strings\")\n",
+    "else:\n",
+    "    print(f\"C++ Semi persistent program failed executing with {t} strings and exit code {result.returncode}\")"
    ]
   },
   {
@@ -138,27 +174,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Haskell program successfully executed with 150 strings\n"
+      "Haskell program successfully executed with 181 strings\n",
+      "Haskell parallel program failed executing with 181 strings and exit code 0\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "### Please note that you'd need to run \"stack install\" in terminal for the executable to be accessible here.\n",
     "command = \"msubstr\"\n",
     "result = subprocess.run(command, input=generated_input, text=True, capture_output=True, shell=True)\n",
     "\n",
     "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
     "    print(f\"Haskell program successfully executed with {t} strings\")\n",
     "else:\n",
-    "    print(f\"Haskell program failed executing with {t} strings and exit code {result.returncode}\")\n"
+    "    print(f\"Haskell program failed executing with {t} strings and exit code {result.returncode}\")\n",
+    "\n",
+    "\n",
+    "command = \"msubstr-par\"\n",
+    "result = subprocess.run(command, input=generated_input, text=True, capture_output=True, shell=True)\n",
+    "\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
+    "    print(f\"Haskell parallel program successfully executed with {t} strings\")\n",
+    "else:\n",
+    "    print(f\"Haskell parallel program failed executing with {t} strings and exit code {result.returncode}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## QUERIES\n",
+    "\n",
+    "Given q queries of insertion and deletion of characters, compute the number of palindromes after each query.\n",
+    "### Generate test case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = random.randint(1000, 5000)\n",
+    "count = 0\n",
+    "test_s = str(n) + \"\\n\"\n",
+    "actual_s = \"\"\n",
+    "correct_output = []\n",
+    "def is_palindrome(str, L, R):\n",
+    "    # Keep comparing characters while they are same\n",
+    "    while R > L:\n",
+    "        if str[L] != str[R]:\n",
+    "            return False\n",
+    "        L += 1\n",
+    "        R -= 1\n",
+    "    return True\n",
+    "def count_palindromes(str):\n",
+    "    n = len(str)\n",
+    "    count = 0\n",
+    "    for i in range(n):\n",
+    "        for j in range(i, n):\n",
+    "            if(is_palindrome(str, i, j)):\n",
+    "                count += 1\n",
+    "    return count\n",
+    "for _ in range(n):\n",
+    "    if random.random() < 0.4 and count > 0:\n",
+    "        test_s += \"-\"\n",
+    "        actual_s = actual_s[:-1]\n",
+    "        count -= 1\n",
+    "    else: \n",
+    "        ch =  ''.join(random.choices(string.ascii_lowercase))\n",
+    "        test_s += ch\n",
+    "        actual_s += ch \n",
+    "        count += 1\n",
+    "    correct_output.append(count_palindromes(actual_s))\n",
+    "expected_output = ' '.join(map(str, correct_output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run C++ code on test case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C++ Direct links program successfully executed\n",
+      "C++ Semi persistent program successfully executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = \"./cpp/build/queries-direct\"\n",
+    "result = subprocess.run(command, input=test_s, text=True, capture_output=True)\n",
+    "\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
+    "    print(f\"C++ Direct links program successfully executed\")\n",
+    "else:\n",
+    "    print(f\"C++ Direct links program failed executing with exit code {result.returncode}\")\n",
+    "\n",
+    "command = \"./cpp/build/queries-semi-pers\"\n",
+    "result = subprocess.run(command, input=test_s, text=True, capture_output=True)\n",
+    "\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
+    "    print(f\"C++ Semi persistent program successfully executed\")\n",
+    "else:\n",
+    "    print(f\"C++ Semi persistent program failed executing with exit code {result.returncode}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Haskell code on test case\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Haskell program successfully executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "command = \"queries\"\n",
+    "result = subprocess.run(command, input=test_s, text=True, capture_output=True, shell=True)\n",
+    "\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output.strip():\n",
+    "    print(f\"Haskell program successfully executed\")\n",
+    "else:\n",
+    "    print(f\"Haskell program failed executing with exit code {result.returncode}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rich - A216264 sequence\n",
+    "Number of rich binary words of length n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_output = [1, 2, 4, 8, 16, 32, 64, 128, 252]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run C++ code on test cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C++ Direct links program successfully executed with n=1\n",
+      "C++ Semi persistent program successfully executed with n=1\n",
+      "C++ Direct links program successfully executed with n=2\n",
+      "C++ Semi persistent program successfully executed with n=2\n",
+      "C++ Direct links program successfully executed with n=3\n",
+      "C++ Semi persistent program successfully executed with n=3\n",
+      "C++ Direct links program successfully executed with n=4\n",
+      "C++ Semi persistent program successfully executed with n=4\n",
+      "C++ Direct links program successfully executed with n=5\n",
+      "C++ Semi persistent program successfully executed with n=5\n",
+      "C++ Direct links program successfully executed with n=6\n",
+      "C++ Semi persistent program successfully executed with n=6\n",
+      "C++ Direct links program successfully executed with n=7\n",
+      "C++ Semi persistent program successfully executed with n=7\n",
+      "C++ Direct links program successfully executed with n=8\n",
+      "C++ Semi persistent program successfully executed with n=8\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range (1, 9):\n",
+    "    command = \"./cpp/build/rich-direct\"\n",
+    "    result = subprocess.run(command, input=str(i), text=True, capture_output=True)\n",
+    "\n",
+    "    if result.returncode == 0 and result.stdout.strip() == str(expected_output[i]):\n",
+    "        print(f\"C++ Direct links program successfully executed with n={i}\")\n",
+    "    else:\n",
+    "        print(f\"C++ Direct links program failed executing with n={i} and exit code {result.returncode}\")\n",
+    "\n",
+    "    command = \"./cpp/build/rich-semi-pers\"\n",
+    "    result = subprocess.run(command, input=str(i), text=True, capture_output=True)\n",
+    "\n",
+    "    if result.returncode == 0 and result.stdout.strip() == str(expected_output[i]):\n",
+    "        print(f\"C++ Semi persistent program successfully executed with n={i}\")\n",
+    "    else:\n",
+    "        print(f\"C++ Semi persistent program failed executing with n={i} and exit code {result.returncode}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Haskell code on test cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Haskell program successfully executed with n=8\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = \"rich\"\n",
+    "result = subprocess.run(command, input=\"9\", text=True, capture_output=True)\n",
+    "expected_output_str = \"How many elements of A216264 to compute?\\nn = \" + \", \".join(map(str, expected_output))\n",
+    "if result.returncode == 0 and result.stdout.strip() == expected_output_str:\n",
+    "    print(f\"Haskell program successfully executed with n={i}\")\n",
+    "else:\n",
+    "    print(f\"Haskell program failed executing with n={i} and exit code {result.returncode}\")"
    ]
   }
  ],
@@ -178,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
